# LibPacSorter

./: .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.md  NEWS  README.md  TODO
headers/: extensionGetter.h  fileNameComparator.h  fileNamePrinter.h  romComparator.h  romSorter.h  romSwapper.h  stringSwapper.h
include/: paccompare.h  pacextension.h  pacsort.h  pacswap.h
src/: debug.c  extensionGetter.c  fileNameComparator.c  fileNamePrinter.c  paccompare.c  pacextension.c  pacsort.c  pacswap.c  romComparator.c  romSorter.c  romSwapper.c  stringSwapper.c  test.c
